force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/Form_LCF_Grant_Achievement_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund Grant Management - Achievement Block - 1.0</description>
    <label>Form LCF Grant Achievement Block 1.0</label>
    <nameField>
        <displayFormat>GAB-{00000}</displayFormat>
        <label>Achievement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCF Grant Achievements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>