force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/ab_approval_status__c.field-meta.xml
<CustomField>
    <fullName>ab_approval_status__c</fullName>
    <description>Approval status of block</description>
    <inlineHelpText>Approval status of block</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grant_Form_Approval_Status</valueSetName>
    </valueSet>
</CustomField>