force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/ab_block_status__c.field-meta.xml
<CustomField>
    <fullName>ab_block_status__c</fullName>
    <description>Processing status of block</description>
    <inlineHelpText>Processing status of block</inlineHelpText>
    <label>Block Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grant_Form_Block_Status</valueSetName>
    </valueSet>
</CustomField>