force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/ab_claim_period__c.field-meta.xml
<CustomField>
    <fullName>ab_claim_period__c</fullName>
    <formula>RIGHT(TEXT(ab_claim_period_start__c), 2)+"/"+MID(TEXT(ab_claim_period_start__c), 6, 2)+"/"+LEFT(TEXT(ab_claim_period_start__c), 4)
+ " to " +
RIGHT(TEXT(ab_claim_period_end__c), 2)+"/"+MID(TEXT(ab_claim_period_end__c), 6, 2)+"/"+LEFT(TEXT(ab_claim_period_end__c), 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Claim period</inlineHelpText>
    <label>Claim Period</label>
    <type>Text</type>
</CustomField>