force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/ab_claim_period_end__c.field-meta.xml
<CustomField>
    <fullName>ab_claim_period_end__c</fullName>
    <inlineHelpText>End date</inlineHelpText>
    <label>Claim Period End</label>
    <type>Date</type>
</CustomField>