force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/ab_claim_period_start__c.field-meta.xml
<CustomField>
    <fullName>ab_claim_period_start__c</fullName>
    <description>Page Title:Reporting/claim period</description>
    <inlineHelpText>Start date</inlineHelpText>
    <label>Claim Period Start</label>
    <type>Date</type>
</CustomField>