force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/Archive_Date__c.field-meta.xml
<CustomField>
    <fullName>Archive_Date__c</fullName>
    <description>Date when block was archived to history</description>
    <inlineHelpText>Date when block was archived to history</inlineHelpText>
    <label>Archive Date</label>
    <type>Date</type>
</CustomField>