force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/de_date__c.field-meta.xml
<CustomField>
    <fullName>de_date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>Date</inlineHelpText>
    <label>DE - Date</label>
    <type>Date</type>
</CustomField>