force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/de_role__c.field-meta.xml
<CustomField>
    <fullName>de_role__c</fullName>
    <inlineHelpText>Role</inlineHelpText>
    <label>DE - Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>