force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/Form_Complete__c.field-meta.xml
<CustomField>
    <fullName>Form_Complete__c</fullName>
    <formula>AND(
ISPICKVAL(ur_section_status__c, &#39;COMPLETE&#39;), 
ISPICKVAL(oa_section_status__c, &#39;COMPLETE&#39;), 
ISPICKVAL(op_section_status__c, &#39;COMPLETE&#39;), 
ISPICKVAL(de_section_status__c, &#39;COMPLETE&#39;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Form complete?</inlineHelpText>
    <label>Form Complete</label>
    <type>Checkbox</type>
</CustomField>