force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/lcf_grant__c.field-meta.xml
<CustomField>
    <fullName>lcf_grant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Grant parent record</description>
    <inlineHelpText>Grant parent record</inlineHelpText>
    <label>LCF Grant</label>
    <referenceTo>LCF_Grant__c</referenceTo>
    <relationshipLabel>Form LCF Grant Achievement Blocks</relationshipLabel>
    <relationshipName>Form_LCF_Grant_Achievement_Blocks</relationshipName>
    <type>Lookup</type>
</CustomField>