force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/oa_number_of_outcome_achievements__c.field-meta.xml
<CustomField>
    <fullName>oa_number_of_outcome_achievements__c</fullName>
    <description>Count of outcome achievement records</description>
    <inlineHelpText>Count of outcome achievement records</inlineHelpText>
    <label>OA - Number of Outcome Achievements</label>
    <summaryForeignKey>Form_LCF_Outcome_Achievement_1__c.grant_achievement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>