force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/oa_total_period_outcome_payments__c.field-meta.xml
<CustomField>
    <fullName>oa_total_period_outcome_payments__c</fullName>
    <description>Total of outcome payments</description>
    <inlineHelpText>Total of outcome payments</inlineHelpText>
    <label>OA - Total Period Outcome Payments</label>
    <summarizedField>Form_LCF_Outcome_Achievement_1__c.oa_period_outcome_payments__c</summarizedField>
    <summaryForeignKey>Form_LCF_Outcome_Achievement_1__c.grant_achievement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>