force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/oa_total_period_target__c.field-meta.xml
<CustomField>
    <fullName>oa_total_period_target__c</fullName>
    <description>Total of outcome participant targets</description>
    <inlineHelpText>Total of outcome participant targets</inlineHelpText>
    <label>OA - Total Period Target</label>
    <summarizedField>Form_LCF_Outcome_Achievement_1__c.oa_period_target__c</summarizedField>
    <summaryForeignKey>Form_LCF_Outcome_Achievement_1__c.grant_achievement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>