force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/op_non_lcf_outcome_payments_claimed__c.field-meta.xml
<CustomField>
    <fullName>op_non_lcf_outcome_payments_claimed__c</fullName>
    <inlineHelpText>What is the total amount of outcomes payments you have claimed from outcomes payers other than the Life Chances Fund this period?</inlineHelpText>
    <label>OP - Non LCF Outcome Payments Claimed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>