force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/op_outcome_achievement_files__c.field-meta.xml
<CustomField>
    <fullName>op_outcome_achievement_files__c</fullName>
    <inlineHelpText>Outcome Achievement: File Upload</inlineHelpText>
    <label>OP - Outcome Achievement Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>