force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/op_payment_claim_files__c.field-meta.xml
<CustomField>
    <fullName>op_payment_claim_files__c</fullName>
    <inlineHelpText>Payment Claims: File Upload</inlineHelpText>
    <label>OP - Payment Claim Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>