force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/op_period_outcome_top_up__c.field-meta.xml
<CustomField>
    <fullName>op_period_outcome_top_up__c</fullName>
    <inlineHelpText>What it the total amount of outcome top-up you are claiming this period?</inlineHelpText>
    <label>OP - Period Outcome Top-up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>