force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/op_spend_committed_after_acceptance__c.field-meta.xml
<CustomField>
    <fullName>op_spend_committed_after_acceptance__c</fullName>
    <inlineHelpText>Was this spend committed after the date on which you accepted your in-principle award?</inlineHelpText>
    <label>OP - Spend Committed after Acceptance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>