force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/op_verification_file__c.field-meta.xml
<CustomField>
    <fullName>op_verification_file__c</fullName>
    <inlineHelpText>Verification: File Upload</inlineHelpText>
    <label>OP - Verification File</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>