force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/tp_number_of_trigger_payments__c.field-meta.xml
<CustomField>
    <fullName>tp_number_of_trigger_payments__c</fullName>
    <description>Count of trigger payment records</description>
    <inlineHelpText>Count of trigger payment records</inlineHelpText>
    <label>TP - Number of Trigger Payments</label>
    <summaryForeignKey>Form_LCF_Trigger_Payment_1__c.grant_achievement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>