force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/tp_total_trigger_payments__c.field-meta.xml
<CustomField>
    <fullName>tp_total_trigger_payments__c</fullName>
    <description>Total of payments triggered</description>
    <inlineHelpText>Total of payments triggered</inlineHelpText>
    <label>TP - Total Trigger Payments</label>
    <summarizedField>Form_LCF_Trigger_Payment_1__c.tp_payment__c</summarizedField>
    <summaryForeignKey>Form_LCF_Trigger_Payment_1__c.grant_achievement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>