force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/ur_period_participant_starters__c.field-meta.xml
<CustomField>
    <fullName>ur_period_participant_starters__c</fullName>
    <inlineHelpText>How many participants started the program this reporting period?</inlineHelpText>
    <label>UR - Period Participant Starters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>