force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/ur_period_referral_actual__c.field-meta.xml
<CustomField>
    <fullName>ur_period_referral_actual__c</fullName>
    <inlineHelpText>How many participants were referred during this reporting period?</inlineHelpText>
    <label>UR - Period Referral Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>