force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/ur_period_referral_target__c.field-meta.xml
<CustomField>
    <fullName>ur_period_referral_target__c</fullName>
    <inlineHelpText>What was the participant referral target for this reporting period?</inlineHelpText>
    <label>UR - Period Referral Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>