force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/fields/ur_section_status__c.field-meta.xml
<CustomField>
    <fullName>ur_section_status__c</fullName>
    <label>UR - Section Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_Section_Status</valueSetName>
    </valueSet>
</CustomField>