force-app/main/default/objects/Form_LCF_Grant_Achievement_1__c/listViews/Submitted.listView-meta.xml
<ListView>
    <fullName>Submitted</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>ab_claim_period_start__c</columns>
    <columns>ab_claim_period_end__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Reviewer__c</columns>
    <columns>Form_Complete__c</columns>
    <columns>ab_approval_status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ab_approval_status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Submitted for Approval</label>
</ListView>